--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "RAK S.A. de C.V.",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^1.24.0",
     "@google/generative-ai": "^0.15.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
