--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.10.3",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.9",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2"
