--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@google/genai": "^1.24.0",
     "@google/generative-ai": "^0.15.0",
+    "@nodecfdi/credentials": "^2.0.3",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.13.0",
     "bcryptjs": "^2.4.3",
