--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nodemailer": "^7.0.9",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2",
+    "serverless-http": "^4.0.0",
     "soap": "^1.6.0"
   },
   "devDependencies": {
