--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "RAK S.A. de C.V.",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.943.0",
     "@google/genai": "^1.24.0",
     "@google/generative-ai": "^0.15.0",
     "@nodecfdi/credentials": "^2.0.3",
